--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     -->
     <div class="wrapper">
       <div class="content" role="main">
-        <h1 class="title">Hello World!</h1>
+        <h1 class="title">Hello from Github!</h1>
         <p>Is this sync to Gitlab/hub?</p>
         <img
           src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
